# atlas-sage

./: .env.example  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: gap-report.md  ingest.md  query.md  sprint.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
atlas_sage/: __init__.py  cli.py  config.py  orchestrator.py
atlas_sage/community/: pipeline.py
atlas_sage/ingestion/: pipeline.py
atlas_sage/query/: pipeline.py
atlas_sage/store/: schema.py  store.py
atlas_sage/testing/: harness_query.py  runner.py
atlas_sage/tools/: definitions.py  executor.py  registry.py  skill_tools.py  store_tools.py
docs/: ARCHITECTURE.md  BACKLOG.md  RETRO-S0-S4.md  SETUP.md  THESIS-SSR.md  VISION.md
docs/sample/: SKILL-scss-postcss-v1.1.md  SKILL-scss-postcss-v1.md  SKILL-scss-postcss.md
test_harness/: README.md  run_log.json
test_harness/fixtures/product_chain/: api.py  index.html  product.scss  products.ts
test_harness/prompts/v000/: create_skill.md  meta.json  multi_file_ingestion.md
test_harness/prompts/v001/: meta.json
test_harness/prompts/v002/: create_skill.md  meta.json
test_harness/prompts/v003/: ingestion.md  meta.json  query.md
test_harness/prompts/v004/: meta.json  multi_file_ingestion.md  query.md
test_harness/prompts/v005/: meta.json  (+1 more)
test_harness/specs/: sprint0_scss.py  sprint1.py  sprint2.py  sprint3.py  sprint4.py
tests/: conftest.py  test_harness_runner.py  test_scss.py  test_sprint0.py  test_sprint1.py
(+16 files in other folders)
